CRM - Trello - 委刊單頁面調整需求 2022-05-30
https://trello.com/c/hygkImhC/67-%E5%A7%94%E5%88%8A%E5%96%AE%E9%A0%81%E9%9D%A2%E8%AA%BF%E6%95%B4%E9%9C%80%E6%B1%82-2022-05-30

--- a/CRM/order.html
+++ b/CRM/order.html
@@ -169,15 +169,50 @@
                         <span>新增委刊單</span>
                     </a>
                 </div>
+                <!-- 可排序欄位 -->
+                <!-- 外層 + click-sort -->
+                <!-- 內層 + <span class="icon-sort"> -->
                 <div class="data-list">
+                    <div class="card toptitle-style clearfix">
+                        <h4 class="order-name click-sort">委刊客戶<span class="icon-sort"><i class="fas fa-sort"></i></span></h4>
+                        <p class="product-valid-period order-time">廣告走期</p>
+                        <div class="order-percentage">
+                            <p>花費</p>
+                        </div>
+                        <div class="order-day click-sort">
+                            <p>建立日期<span class="icon-sort"><i class="fas fa-sort"></i></span></p>
+                        </div>
+                        <div class="order-day day-2 click-sort">
+                            <p>輸出日期<span class="icon-sort"><i class="fas fa-sort"></i></span></p>
+                        </div>
+                        <div class="order-day click-sort">
+                            <p>用印完成<span class="icon-sort"><i class="fas fa-sort"></i></span></p>
+                        </div>
+                        <p class="order-owner click-sort">所有者<span class="icon-sort"><i class="fas fa-sort"></i></span></p>
+                    </div>
                     <div class="card clearfix">
                         <a class="go-detail popup-link" href="#popup-order-info">
-                            <h4 class="order-name step-one">購一波專案-C_專案委刊單</h4>
+                            <!-- 需主管同意 label -->
+                            <p class="label-audit">需主管同意</p>
+                            <h4 class="order-name step-one">雙影創藝有限公司 - 陳啟中(粉粉)</h4>
+                            <p class="product-valid-period order-time">
+                                <span class="calendar">
+                                    <i class="fas fa-calendar-alt"></i>
+                                </span>2022/10/01 - 2022/12/31
+                            </p>
                             <div class="order-percentage">
                                 <p class="c-red">25%</p>
                             </div>
-                            <p class="order-customer">雙影創藝有限公司 - 陳啟中(粉粉)</p>
-                            <p class="date">2021/09/16 10:10</p>
+                            <div class="order-day">
+                                <p>2022/09/01</p>
+                            </div>
+                            <div class="order-day day-2">
+                                <p></p>
+                            </div>
+                            <div class="order-day">
+                                <p></p>
+                            </div>
+                            <p class="order-owner">Sandy yu</p>
                         </a>
                         <ul class="edit-tool">
                             <li>
@@ -204,14 +239,124 @@
                     </div>
                     <div class="card clearfix">
                         <a class="go-detail popup-link">
-                            <h4 class="order-name step-two">購一波專案-C_專案委刊單</h4>
+                            <h4 class="order-name step-three">高筱蘋 - 高筱蘋</h4>
+                            <p class="product-valid-period order-time">
+                                <span class="calendar">
+                                    <i class="fas fa-calendar-alt"></i>
+                                </span>2022/10/01 - 2022/12/31
+                            </p>
                             <div class="order-percentage">
-                                <p class="c-orange">75%</p>
+                                <p class="c-green">88%</p>
                             </div>
-                            <p class="order-customer">高筱蘋 - 高筱蘋</p>
-                            <p class="date">2021/09/16 10:10</p>
+                            <div class="order-day">
+                                <p>2022/02/12</p>
+                            </div>
+                            <div class="order-day day-2">
+                                <p>2022/05/02</p>
+                            </div>
+                            <div class="order-day">
+                                <p>2021/08/14</p>
+                            </div>
+                            <p class="order-owner">Jeff hohoho</p>
                         </a>
                        <ul class="edit-tool">
+                            <li>
+                                <a class="edit" target="_blank" href="order_print.html">
+                                    <i class="fas fa-eye" title="預覽"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="edit">
+                                    <i class="fas fa-pencil-alt" title="編輯"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="copy">
+                                    <i class="far fa-copy" title="複製"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="delete">
+                                    <i class="far fa-trash-alt" title="下架"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="card clearfix">
+                        <a class="go-detail popup-link">
+                            <!-- 需主管同意 label -->
+                            <p class="label-audit">需主管同意</p>
+                            <h4 class="order-name step-two">菁品創意事業有限公司意事業有限公司 - 黃素菁</h4>
+                            <p class="product-valid-period order-time">
+                                <span class="calendar">
+                                    <i class="fas fa-calendar-alt"></i>
+                                </span>2022/10/01 - 2022/12/31
+                            </p>
+                            <div class="order-percentage">
+                                <p class="c-orange">55%</p>
+                            </div>
+                            <div class="order-day">
+                                <p>2022/09/01</p>
+                            </div>
+                            <div class="order-day day-2">
+                                <p>2022/09/02</p>
+                            </div>
+                            <div class="order-day">
+                                <p></p>
+                            </div>
+                            <p class="order-owner">Eikiy</p>
+                        </a>
+                        <ul class="edit-tool">
+                            <li>
+                                <a class="edit" target="_blank" href="order_print.html">
+                                    <i class="fas fa-eye" title="預覽"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="edit">
+                                    <i class="fas fa-pencil-alt" title="編輯"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="copy">
+                                    <i class="far fa-copy" title="複製"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="delete">
+                                    <i class="far fa-trash-alt" title="下架"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="card clearfix">
+                        <a class="go-detail popup-link">
+                            <h4 class="order-name step-three">巴黎萊雅L'Oréal Paris</h4>
+                            <p class="product-valid-period order-time">
+                                <span class="calendar">
+                                    <i class="fas fa-calendar-alt"></i>
+                                </span>2022/10/01 - 2022/12/31
+                            </p>
+                            <div class="order-percentage">
+                                <p class="c-green">90%</p>
+                            </div>
+                            <div class="order-day">
+                                <p>2022/01/01</p>
+                            </div>
+                            <div class="order-day day-2">
+                                <p>2022/02/02</p>
+                            </div>
+                            <div class="order-day">
+                                <p>2022/4/31</p>
+                            </div>
+                            <p class="order-owner">Eikiy</p>
+                        </a>
+                        <ul class="edit-tool">
+                            <li>
+                                <a class="edit" target="_blank" href="order_print.html">
+                                    <i class="fas fa-eye" title="預覽"></i>
+                                </a>
+                            </li>
                             <li>
                                 <a class="edit">
                                     <i class="fas fa-pencil-alt" title="編輯"></i>
@@ -232,36 +377,29 @@
                     <!-- 下架：class + state-off -->
                     <div class="card state-off clearfix">
                         <a class="go-detail popup-link">
-                            <h4 class="order-name step-one">夏季優惠專案-如果名稱太常究竟會變怎樣呢</h4>
+                            <h4 class="order-name">巴黎萊雅L'Oréal Paris</h4>
+                            <p class="product-valid-period order-time">
+                            </p>
                             <div class="order-percentage">
+                                <p class="c-green"></p>
+                            </div>
+                            <div class="order-day">
+                                <p>2022/09/01</p>
+                            </div>
+                            <div class="order-day day-2">
                                 <p></p>
                             </div>
-                            <p class="order-customer">菁品創意事業有限公司意事業有限公司 - 黃素菁</p>
-                            <p class="date">2021/09/16 10:10</p>
-                        </a>
-                        <ul class="edit-tool">
-                            <li>
-                                <a class="edit">
-                                    <i class="fas fa-pencil-alt" title="編輯"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="copy">
-                                    <i class="far fa-copy" title="複製"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="card state-off clearfix">
-                        <a class="go-detail popup-link" href="#popup-order-info">
-                            <h4 class="order-name step-one">購一波專案-C_專案委刊單</h4>
-                            <div class="order-percentage">
+                            <div class="order-day">
                                 <p></p>
                             </div>
-                            <p class="order-customer">菁品創意事業有限公司 - 黃素菁</p>
-                            <p class="date">2021/09/16 10:10</p>
+                            <p class="order-owner">Ooookide</p>
                         </a>
                         <ul class="edit-tool">
+                            <li>
+                                <a class="edit" target="_blank" href="order_print.html">
+                                    <i class="fas fa-eye" title="預覽"></i>
+                                </a>
+                            </li>
                             <li>
                                 <a class="edit">
                                     <i class="fas fa-pencil-alt" title="編輯"></i>
@@ -272,136 +410,9 @@
                                     <i class="far fa-copy" title="複製"></i>
                                 </a>
                             </li>
-                        </ul>
-                    </div>
-                    <div class="card clearfix">
-                        <a class="go-detail popup-link">
-                            <h4 class="order-name step-three">夏季優惠專案</h4>
-                            <div class="order-percentage">
-                                <p class="c-green">100%</p>
-                            </div>
-                            <p class="order-customer">日商再春館股份有限公司台灣分公司</p>
-                            <p class="date">2021/09/16 10:10</p>
-                        </a>
-                        <ul class="edit-tool">
                             <li>
-                                <a class="edit">
-                                    <i class="fas fa-pencil-alt" title="編輯"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="copy">
-                                    <i class="far fa-copy" title="複製"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="card state-off clearfix">
-                        <a class="go-detail popup-link" href="#popup-order-info">
-                            <h4 class="order-name step-one">購一波專案-C_專案委刊單</h4>
-                            <div class="order-percentage">
-                                <p></p>
-                            </div>
-                            <p class="order-customer">翃泰股份有限公司</p>
-                            <p class="date">2021/09/16 10:10</p>
-                        </a>
-                        <ul class="edit-tool">
-                            <li>
-                                <a class="edit">
-                                    <i class="fas fa-pencil-alt" title="編輯"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="copy">
-                                    <i class="far fa-copy" title="複製"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="card state-off clearfix">
-                        <a class="go-detail popup-link" href="#popup-order-info">
-                            <h4 class="order-name step-one">購一波專案-C_專案委刊單</h4>
-                            <div class="order-percentage">
-                                <p></p>
-                            </div>
-                            <p class="order-customer">巴黎萊雅L'Oréal Paris</p>
-                            <p class="date">2021/09/16 10:10</p>
-                        </a>
-                        <ul class="edit-tool">
-                            <li>
-                                <a class="edit">
-                                    <i class="fas fa-pencil-alt" title="編輯"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="copy">
-                                    <i class="far fa-copy" title="複製"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="card state-off clearfix">
-                        <a class="go-detail popup-link" href="#popup-order-info">
-                            <h4 class="order-name step-two">購一波專案</h4>
-                            <div class="order-percentage">
-                                <p class="c-orange">55%</p>
-                            </div>
-                            <p class="order-customer">I MIA Scent.</p>
-                            <p class="date">2021/09/16 10:10</p>
-                        </a>
-                        <ul class="edit-tool">
-                            <li>
-                                <a class="edit">
-                                    <i class="fas fa-pencil-alt" title="編輯"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="copy">
-                                    <i class="far fa-copy" title="複製"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="card clearfix">
-                        <a class="go-detail popup-link" href="#popup-order-info">
-                            <h4 class="order-name step-two">AAAA專案委刊單</h4>
-                            <div class="order-percentage">
-                                <p class="c-orange">50%</p>
-                            </div>
-                            <p class="order-customer">昱驊養生瑜珈中心-台北松山店</p>
-                            <p class="date">2021/09/16 10:10</p>
-                        </a>
-                        <ul class="edit-tool">
-                            <li>
-                                <a class="edit">
-                                    <i class="fas fa-pencil-alt" title="編輯"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="copy">
-                                    <i class="far fa-copy" title="複製"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="card clearfix">
-                        <a class="go-detail popup-link" href="#popup-order-info">
-                            <h4 class="order-name step-three">購一波專案-C_專案委刊單</h4>
-                            <div class="order-percentage">
-                                <p class="c-green">95%</p>
-                            </div>
-                            <p class="order-customer">生活的藝術 台灣中心 - 宵曉晴</p>
-                            <p class="date">2021/09/16 10:10</p>
-                        </a>
-                        <ul class="edit-tool">
-                            <li>
-                                <a class="edit">
-                                    <i class="fas fa-pencil-alt" title="編輯"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="copy">
-                                    <i class="far fa-copy" title="複製"></i>
+                                <a class="delete">
+                                    <i class="far fa-trash-alt" title="下架"></i>
                                 </a>
                             </li>
                         </ul>
